Make expand-collapse icons fixed width

--- a/css/site.css
+++ b/css/site.css
@@ -194,9 +194,12 @@ img {
   padding: .5rem 1rem;
 }
 
-.btn > .fa.left {
-   margin-right: .5rem; 
+.left,
+.fa-fw.left
+.btn > .fa.left { 
+   text-align: left;
 }
+
 .medium,
 .fa.medium {
   font-size: 1.1rem;
@@ -300,4 +303,8 @@ i.refresh-comments {
   -webkit-filter: grayscale(25%); /* Safari 6.0 - 9.0 */
   filter: grayscale(25%);
   opacity: .85;
+}
+
+.btn.expand-collapse-all {
+  min-width: 14rem;
 }
